src/web/assets/cp/src/css/_main.scss
/* ... */
/* pagination */
.pagination {
  table.data + & {
    margin-block-start: 24px;
  }

  .page-link {
    width: calc(30rem / 16);
    height: calc(30rem / 16);
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: var(--medium-border-radius);

    &::after {
      position: relative;
      transition: border-color linear 100ms;
    }

    &.prev-page::after {
      @include mixins.angle(left, var(--light-text-color));
      inset-inline-end: -1px;
    }

    &.next-page::after {
      @include mixins.angle(right, var(--light-text-color));
      inset-inline-start: -1px;
    }

    &:not(.disabled) {
      transition: box-shadow linear 100ms;
      box-shadow: inset 0 0 0 1px var(--hairline-color);
      cursor: pointer;

      &:hover {
        text-decoration: none;
        box-shadow: inset 0 0 0 1px var(--link-color);

        &::after {
          border-color: var(--link-color);
        }
      }

      &:focus-visible {
        box-shadow:
          inset 0 0 0 1px var(--hairline-color),
          var(--focus-ring);
      }
    }

    &.disabled {
      opacity: 1;

      &::after {
        border-color: var(--hairline-color);
      }
    }
  }
}

/* action buttons */
.actions {
  float: inline-end;
}

.actions > li {
  float: inline-start;
}

.actions > li + li {
  margin-inline-start: 10px;
}

h1 + .actions {
  margin-block-start: -100px;
}

h2 + .actions {
  margin-block-start: -54px;
}

/* ----------------------------------------
/*  Tables
/* ---------------------------------------- */

.tablepane {
  --pane-y-padding-default: calc(var(--xl) - 2px);
  --pane-x-padding-default: calc(var(--padding) - 2px);
  margin-block: calc(var(--pane-padding, var(--pane-y-padding-default)) * -1)
    calc(
      var(--pane-padding, var(--padding)) * -1 + var(--pane-padding, var(--m))
    );
  margin-inline: calc(var(--pane-padding, var(--pane-x-padding-default)) * -1);
  padding: 0 !important;
  overflow-x: auto;

  table.data {
    th,
    td {
      &:first-child:not(.checkbox-cell, .vuetable-th-slot-checkbox) {
        padding-inline-start: var(
          --pane-padding,
          var(--pane-x-padding-default)
        );
      }

      &:last-child {
        padding-inline-end: var(--pane-padding, var(--pane-x-padding-default));
      }
    }
  }
}
/* ... */

